--- a/custom_weights/rsl_season7.json
+++ b/custom_weights/rsl_season7.json
@@ -13,20 +13,22 @@
             "exclude_ice_trap_misery": [true],
             "disable_keysanity_independence": [true],
             "random_scrubs_start_wallet": [true],
-            "split_collectible_bridge_conditions": [true, 15, "50/50", "40/40/20"],
+            "split_collectible_bridge_conditions": [true, "15%", "50/50", "40/40/20"],
             "replace_dampe_diary_hint_with_lightarrow": [true],
             "adjust_chaos_hint_distro": [true],
             "exclude_mapcompass_info_remove": [true],
             "ohko_starts_with_nayrus": [true],
             "shuffle_valley_lake_exit": [true],
-            "select_one_pots_crates_freestanding": [true, 20, "1/1/1", "1/1/1"],
+            "select_one_pots_crates_freestanding": [true, "20%", "1/1/1", "1/1/1"],
             "geometrically_draw_dungeon_shortcuts": [true],
-            "limit_overworld_entrances_in_mixed_entrance_pools": [true, 20],
+            "limit_overworld_entrances_in_mixed_entrance_pools": [true, "20%"],
             "restrict_one_entrance_randomizer": [false],
             "disable_pot_chest_texture_independence": [false],
-            "shuffle_goal_hints": [false, 50],
-            "invert_dungeons_mq_count": [false, 0],
-            "exclude_minimal_triforce_hunt": [false]
+            "shuffle_goal_hints": [false, "50%"],
+            "invert_dungeons_mq_count": [false, "0%"],
+            "exclude_minimal_triforce_hunt": [false],
+            "limit_mixed_pool_entrances": [false, 2, false],
+            "keysanity_key_get_keyrings": [false]
         },
         "misc_hints": [
             "altar",
@@ -75,7 +77,9 @@
         "spawn_positions": 50,
         "shuffle_child_trade": 20,
         "minor_items_as_major_chest": 0,
-        "adult_trade_start": 100
+        "adult_trade_start": 100,
+        "potcrate_textures_specific": 100,
+        "chest_textures_specific": 100
     },
     "weights": {
         "shuffle_loach_reward": {
@@ -286,7 +290,8 @@
         "empty_dungeons_mode": {
             "none": 1,
             "specific": 0,
-            "count": 0
+            "count": 0,
+            "rewards": 0
         },
         "key_rings_choice": {
             "off": 0,
@@ -766,6 +771,27 @@
         "shuffle_empty_crates": {
             "true": 0,
             "false": 1
+        },
+        "soa_unlocks_chest_texture": {
+            "true": 0,
+            "false": 1
+        },
+        "soa_unlocks_potcrate_texture": {
+            "true": 0,
+            "false": 1
+        },
+        "skip_reward_from_rauru": {
+            "true": 1,
+            "false": 0
+        },
+        "shuffle_dungeon_rewards": {
+            "vanilla": 0,
+            "reward": 1,
+            "dungeon": 0,
+            "regional": 0,
+            "overworld": 0,
+            "any_dungeon": 0,
+            "anywhere": 0
         }
     }
 }
